# ConsoleGraphics

./: .gitignore
Stars/: 3dObjects.cpp  CMakeLists.txt  Fireballs.cpp  Flame.cpp  MatrixColumns.cpp  StarsApp.cpp  TestVSync.cpp  main.cpp
Stars/Docker/: Dockerfile  build_docker.sh  run-flame.sh  run-matrix-columns.sh  run-stars.sh  run.sh
Stars/Sources/: BlurModel.h  ConsoleExample.h  FireballModel.h  FlameModel.h  MatrixColumnsModel.h  StarsModel.h
Stars/Sources/Common/: ConsoleApp.cpp  ConsoleApp.h  Display.h
Stars/Sources/glm/: .gitignore  install.sh
Stars/build_script/: run_cmake.sh
Stars/sources/: Display.h  StarsModel.h  Timer.h  defines.h
